magpie 1.15
-----------
Increase file and process limit default calculation. 

magpie 1.14
-----------
Add hadoop-env.sh output to magpie-example-pre-job-script.
Fix corner case in HADOOP_ENVIRONMENT_EXTRA_PATH setting
Create new HADOOP_MASTER_NODE envrionment variable.
Add support for Zookeeper.
Update comments/documentation.

magpie 1.13
-----------
Split magpie-run into numerous run files.
Exit on input errors and don't run rest of job.
Rename some scripts/examples as needed.
Rename HADOOP_REMOTE_CMD to MAGPIE_REMOTE_CMD
Support MAGPIE_REMOTE_CMD_OPTS environment variable.

magpie 1.12
-----------
Clarify text and rename many files/environment files.
Add sbatch --output to make sbatch file.

magpie 1.11
-----------
Support magpie network fs scheme.

magpie 1.10
-----------
Support Intel Lustre scheme in IDH.

magpie 1.9
----------
Minor corner case fixes.

magpie 1.8
----------
General code cleanup/code-reorg and documentation fixes.

magpie 1.7
----------
Support HADOOP_RAWNETWORKFS_BLOCKSIZE option.

magpie 1.6
----------
Support inputting multiple paths for HDFS and local store fs.
Code re-org, move common exports to new file hadoop-common-exports.
Rename HADOOP_BUILD_HOME to HADOOP_HOME for legacy purposes.

magpie 1.5
----------
Increase HDFS bandwidthPerSec to 4G, which is ~QDR ipoib speed.

magpie 1.4
----------
Make default HDFS over Lustre replication 3
Document trade offs of replication.
Increase HDFS bandwidthPerSec.
Fix hadoop-hdfs-over-lustre-nodes-decomission-script.sh path bug.
Fix hadoop-create-files-script.sh to work w/ Hadoop 1.0 & 2.0.
Add convenience script hadoop-remove-all-files-script.sh.

magpie 1.3
----------
Remove slurm job name from hdfs over lustre created path. Use path
given directly by user.

magpie 1.2
----------
Move hadoop-gather into generic post run script
hadoop-gather-config-files-and-logs-script.sh.

Fix environment variable export in post scripts

General documentation updates.

magpie 1.1
----------